# comfyUI-JMNodes

./: .gitignore  LICENSE  README.md  __init__.py  binary_permutation_workflow.json  boolean_workflow_with negative_prompts.json  pyproject.toml
nodes/: JMBinaryNot.py  JMIntegerToBooleans.py  JMNumberList.py  JMSWitchablePrompt.py
